Don't wrap the date column in gh issue popup
It makes the box and all its rows too tall.

--- a/root/static/less/global.less
+++ b/root/static/less/global.less
@@ -136,6 +136,9 @@ ul {
     font-size: 12px;
     max-width: 800px;
 
+    .relatized {
+        white-space: nowrap;
+    }
     .qtip-content {
         padding: 0;
         margin: 0;
